--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,6 @@
     </header>
     <main class="main"></main>
     <footer class="footer"></footer>
-    <div class="modal__oferlay is-hidden"></div>
+    <div class="modal__overlay"></div>
   </body>
 </html>
