--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,21 @@
         </div>
       </nav>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div class='list_movies'></div>
+      <button
+      class="btn btn-primary is-hidden"
+      type="button"
+      data-action="load more"
+    >
+      <span
+        class="spinner-border spinner-border-sm is-hidden"
+        role="status"
+        aria-hidden="true"
+      ></span>
+
+      <span class="label spinner">See more</span>
+    </main>
     <footer class="footer"></footer>
     <div class="modal__overlay"></div>
   </body>
