--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,10 @@
         </div>
 
         <div class="user__navigation">
-          <p><i class="material-icons login">account_circle</i></p>
-          <p><i class="material-icons logout">login</i></p>
+          <p class="user__account is-hidden">
+            <i class="material-icons user">account_circle</i>
+          </p>
+          <p class="user__login"><i class="material-icons login">login</i></p>
         </div>
       </nav>
     </header>
