--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>MovieMania</title>
   </head>
 
-  <body>
+  <body >
     <header class="header">
       <nav class="navigation">
         <ul class="navigation__list">
@@ -49,8 +50,8 @@
         </div>
       </nav>
     </header>
-    <main class="main">
-      <div class='list_movies'></div>
+    <main class="main container">
+      <div class='list_movies '  ></div>
       <button
       class="btn btn-primary is-hidden"
       type="button"
