--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,30 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>MovieMania</title>
   </head>
 
   <body >
+    <!-- <div class="preloader">
+      <div class="loader">
+        <div class="face">
+          <div class="circle"></div>
+        </div>
+        <div class="face">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="page-preloader">
+      <div class="preloader-text">
+          <b>M</b><b>O</b><b>V</b><b>E</b><b>I</b><b>M</b><b>A</b><b>N</b><b>I</b><b>A</b>
+      </div>
+    </div> -->
+
     <header class="header">
       <nav class="navigation">
         <ul class="navigation__list">
