chanhing animation preloader

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body >
-    <!-- <div class="preloader">
+    <div class="preloader">
       <div class="loader">
         <div class="face">
           <div class="circle"></div>
@@ -28,9 +28,9 @@
     
     <div class="page-preloader">
       <div class="preloader-text">
-          <b>M</b><b>O</b><b>V</b><b>E</b><b>I</b><b>M</b><b>A</b><b>N</b><b>I</b><b>A</b>
+          <b>M</b><b>O</b><b>V</b><b>I</b><b>E</b><b>M</b><b>A</b><b>N</b><b>I</b><b>A</b>
       </div>
-    </div> -->
+    </div>
 
     <header class="header">
       <nav class="navigation">
