--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,7 @@
     <title>MovieMania</title>
   </head>
 
-
   <body>
-<!--     
     <div class="preloader">
       <div class="loader">
         <div class="face">
@@ -41,62 +39,67 @@
         <b>M</b><b>O</b><b>V</b><b>I</b><b>E</b><b>M</b><b>A</b><b>N</b><b>I</b
         ><b>A</b>
       </div>
-    </div>  -->
+    </div>
 
     <header class="header">
       <nav class="navigation">
-      <div class="navigation-left-side">
-        <a class="header-logo-link" href="./">
-          <span>MOVIE</span>
-          <br>
-          <span>MANIA</span>
-        </a>
-        <ul class="navigation__list">
-          <li class="navigation__list__item"><a href="">Главная</a></li>
-          <li class="navigation__list__item list">
-            <a href="">Списки</a>
-            <ul class="navigation__movie__list is-hidden">
-              <li><a href="">Просмотренные</a></li>
-              <li><a href="">Очередь</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-        
-      <div class="navigation-right-side">
-        <form class="search-form"> 
-          <label>
-           <input class="header-search" type="search" placeholder="Поиск фильмов">
-           <button class="search-btn" type="submit">
-             <i class="search-i"></i>
-           </button>
-          </label>
-         </form>
-         <div class="languages">
-           <img 
-             class="language ru__icon"
-             src="./images/ru.png"
-             alt="language russian"
-             width="30px"
-             height="30px"
-           />
-           <img
-             class="language en__icon"
-             src="./images/en.png"
-             alt="language english"
-             width="30px"
-             height="30px"
-           />
-         </div>
- 
-         <div class="user__navigation">
-           <p class="user__account is-hidden">
-             <i class="material-icons user">account_circle</i>
-           </p>
-           <p class="user__login"><i class="material-icons login">login</i></p>
-         </div>
-       
-      </div>
+        <div class="navigation-left-side">
+          <a class="header-logo-link" href="./">
+            <span>MOVIE</span>
+            <br />
+            <span>MANIA</span>
+          </a>
+          <ul class="navigation__list">
+            <li class="navigation__list__item">
+              <a href="" class="mainLink">Главная</a>
+            </li>
+            <li class="navigation__list__item list">
+              <a href="">Списки</a>
+              <ul class="navigation__movie__list is-hidden">
+                <li><a href="">Просмотренные</a></li>
+                <li><a href="">Очередь</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <div class="navigation-right-side">
+          <form class="search-form">
+            <label>
+              <input
+                class="header-search"
+                type="search"
+                placeholder="Поиск фильмов"
+              />
+              <button class="search-btn" type="submit">
+                <i class="search-i"></i>
+              </button>
+            </label>
+          </form>
+          <div class="languages">
+            <img
+              class="language ru__icon"
+              src="./images/ru.png"
+              alt="language russian"
+              width="30px"
+              height="30px"
+            />
+            <img
+              class="language en__icon"
+              src="./images/en.png"
+              alt="language english"
+              width="30px"
+              height="30px"
+            />
+          </div>
+
+          <div class="user__navigation">
+            <p class="user__account is-hidden">
+              <i class="material-icons user">account_circle</i>
+            </p>
+            <p class="user__login"><i class="material-icons login">login</i></p>
+          </div>
+        </div>
       </nav>
     </header>
 
