--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="loader">
         <div class="face">
           <div class="circle"></div>
@@ -39,7 +39,7 @@
         <b>M</b><b>O</b><b>V</b><b>I</b><b>E</b><b>M</b><b>A</b><b>N</b><b>I</b
         ><b>A</b>
       </div>
-    </div>
+    </div> -->
 
     <header class="header">
       <nav class="navigation">
