add metod to get data from firebase

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="navigation-right-side">
-          <i class="material-icons search">search</i>
+          <!-- <i class="material-icons search">search</i> -->
           <form class="search__films">
             <p class="search__films__title">
               Поиск по
@@ -86,7 +86,9 @@
               <!-- <input class="genres" type="search" /> -->
             </label>
 
-            <button type="submit"></button>
+            <button type="submit">
+              <i class="material-icons search">search</i>
+            </button>
           </form>
 
           <div class="languages">
