adds ctyles for pagination

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,11 @@
       <div class="main_card"></div>
     </main>
     <footer class="footer">
-      <div class="footer_container"></div>
+      <div class="footer_container">
+        <span class="div-div-div">
+          
+        </span>
+      </div>
     </footer>
   </body>
 </html>
