--- a/src/index.html
+++ b/src/index.html
@@ -127,9 +127,12 @@
     </main>
     <footer class="footer">
       <div class="footer_container">
-        <span class="div-div-div">
-          
-        </span>
+        <span class="footer_copyright">©  2020 | All Rights Reserved | Developed with </span>
+        
+        <svg width="12px" height="12px">
+          <use class="icon-cross" href="./images/symbol-defs.svg#heart"></use>
+        </svg>
+        <a href="#"><span class="footer_copyright">Angry Beavers</span></a>
       </div>
     </footer>
   </body>
