--- a/src/index.html
+++ b/src/index.html
@@ -128,10 +128,7 @@
     <footer class="footer">
       <div class="footer_container">
         <span class="footer_copyright">©  2020 | All Rights Reserved | Developed with </span>
-        
-        <svg width="12px" height="12px">
-          <use class="icon-cross" href="./images/symbol-defs.svg#heart"></use>
-        </svg>
+        <span class="material-icons footer-icon">favorite</span>
         <a href="#"><span class="footer_copyright">Angry Beavers</span></a>
       </div>
     </footer>
