add drop down menu

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,11 @@
             <p class="user__account is-hidden">
               <i class="material-icons user">account_circle</i>
             </p>
+            <div class="wrapper">
+              <div class="menu">
+                <ul class="menu__list"></ul>
+              </div>
+            </div>
 
             <p class="menu is"></p>
             <p class="user__login"><i class="material-icons login">login</i></p>
