--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,13 @@
           <br />
           <span>MANIA</span>
         </a>
-        <div class="navigation-left-side">
+        <!-- <div class="navigation-left-side">
           <ul class="navigation__list">
             <li class="navigation__list__item">
               <a href="" class="mainLink">Главная</a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="navigation-right-side">
           <form class="search__films">
