new input ganres, switch ganres language

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,9 @@
             </li>
           </ul>
         </div> -->
+        <div class="container-wrapped">
+          <select multiple data-multi-select-plugin></select>
+        </div>
 
         <div class="navigation-right-side">
           <form class="search__films">
@@ -130,5 +133,16 @@
         <a href="#"><span class="footer_copyright">Angry Beavers</span></a>
       </div>
     </footer>
+
+    <div class="container-wrapped">
+      <select multiple data-multi-select-plugin>
+        <option value="Volvo" selected>Volvo</option>
+        <option value="Mercedes" selected>Mercedes</option>
+        <option value="Hilux">Hilux</option>
+        <option value="Corsa">Corsa</option>
+        <option value="BMW">BMW</option>
+        <option value="Ferrari">Ferrari</option>
+      </select>
+    </div>
   </body>
 </html>
