find by ganres and name, clear field input

--- a/src/index.html
+++ b/src/index.html
@@ -61,24 +61,23 @@
             <p class="search__films__title">
               Поиск по
               <span class="search_films_name active__search">названию</span
-                ><span> / </span><span class="search_films_genres">жанру</span>
-              </p>
-              <label class="search__films_by">
-                <input class="name" type="search" />
-              </label>
+              ><span> / </span><span class="search_films_genres">жанру</span>
+            </p>
+            <label class="search__films_by">
+              <input class="name" type="search" />
+            </label>
 
-              <div class="search-genres is-hidden ">
-                <select multiple data-multi-select-plugin></select>
-              </div>
+            <div class="search__genres is-hidden">
+              <select multiple data-multi-select-plugin></select>
+            </div>
 
             <button class="btn__search_form" type="submit">
               <i class="material-icons search">search</i>
             </button>
           </form>
         </div>
-        
+
         <div class="languages">
-        
           <p class="ru__icon active__language" data-lang="ru-RU">RU</p>
           <span class="languages__separator">|</span>
           <p class="en__icon" data-lang="en-EN">EN</p>
