--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
             <p class="user__account is-hidden">
               <i class="material-icons user">account_circle</i>
             </p>
-            <div class="wrapper">
+            <div class="wrapper" aria-expanded="false">
               <div class="menu">
                 <ul class="menu__list"></ul>
               </div>
