styles for tablet and mobile

--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,13 @@
 
     <header class="header">
       <nav class="navigation">
-        <a class="header-logo-link" href="./">
-          <span>MOVIE</span>
-          <br />
-          <span>MANIA</span>
-        </a>
+     <div class="header-logo-nav">
+      <a class="header-logo-link" href="./">
+        <span>MOVIE</span>
+        <br />
+        <span>MANIA</span>
+      </a>
+     </div>
         <!-- <div class="navigation-left-side">
           <ul class="navigation__list">
             <li class="navigation__list__item">
@@ -75,35 +77,35 @@
               <i class="material-icons search">search</i>
             </button>
           </form>
-        </div>
+        </div> 
         
-        <div class="languages">
-        
-          <p class="ru__icon active__language" data-lang="ru-RU">RU</p>
-          <span class="languages__separator">|</span>
-          <p class="en__icon" data-lang="en-EN">EN</p>
-        </div>
+    <div class="menu-lang-user">
+      <div class="languages">
+        <p class="ru__icon active__language" data-lang="ru-RU">RU</p>
+        <span class="languages__separator">|</span>
+        <p class="en__icon" data-lang="en-EN">EN</p>
+      </div>
 
-        <div class="user__navigation">
-          <p class="user__account is-hidden">
-            <i class="material-icons user">account_circle</i>
-          </p>
-          <div class="wrapper">
-            <div class="menu">
-              <ul class="menu__list"></ul>
-            </div>
-
-            <p class="menu is"></p>
-            <p class="user__login"><i class="material-icons login">login</i></p>
-
-            <!-- Burger menu for mobile and tablet -->
-            <!-- <div id="menu__btn">
-              <span class="icon"></span>
-              <span class="text">MENU</span>
-            </div>
-            <div class="user__menu"></div> -->
+      <div class="user__navigation">
+        <p class="user__account is-hidden">
+          <i class="material-icons user">account_circle</i>
+        </p>
+        <div class="wrapper">
+          <div class="menu">
+            <ul class="menu__list"></ul>
           </div>
+          <p class="menu is"></p>
+          <p class="user__login"><i class="material-icons login">login</i></p>
+
+          <!-- Burger menu for mobile and tablet -->
+          <!-- <div id="menu__btn">
+            <span class="icon"></span>
+            <span class="text">MENU</span>
+          </div>
+          <div class="user__menu"></div> -->
         </div>
+      </div>
+    </div>
       </nav>
     </header>
 
