adds div in index-html for flexes

--- a/src/index.html
+++ b/src/index.html
@@ -79,44 +79,46 @@
           </form>
         </div>
 
-        <div class="languages">
-          <p class="ru__icon active__language" data-lang="ru-RU">RU</p>
-          <span class="languages__separator">|</span>
-          <p class="en__icon" data-lang="en-EN">EN</p>
+    <div class="menu-lang-user">
+  <div class="languages">
+    <p class="ru__icon active__language" data-lang="ru-RU">RU</p>
+    <span class="languages__separator">|</span>
+    <p class="en__icon" data-lang="en-EN">EN</p>
+  </div>
+
+
+    <div class="user__navigation">
+      <p class="user__account is-hidden">
+        <i class="material-icons user">account_circle</i>
+      </p>
+      <div class="wrapper" aria-expanded="false">
+        <div class="menu">
+          <ul class="menu__list"></ul>
         </div>
 
-
-          <div class="user__navigation">
-            <p class="user__account is-hidden">
-              <i class="material-icons user">account_circle</i>
-            </p>
-            <div class="wrapper" aria-expanded="false">
-              <div class="menu">
-                <ul class="menu__list"></ul>
-              </div>
-
-            </div>
-
-
-      <div class="user__navigation">
-        <p class="user__account is-hidden">
-          <i class="material-icons user">account_circle</i>
-        </p>
-        <div class="wrapper">
-          <div class="menu">
-            <ul class="menu__list"></ul>
-          </div>
-          <p class="menu is"></p>
-          <p class="user__login"><i class="material-icons login">login</i></p>
-
-          <!-- Burger menu for mobile and tablet -->
-          <!-- <div id="menu__btn">
-            <span class="icon"></span>
-            <span class="text">MENU</span>
-          </div>
-          <div class="user__menu"></div> -->
-        </div>
       </div>
+
+
+<div class="user__navigation">
+  <p class="user__account is-hidden">
+    <i class="material-icons user">account_circle</i>
+  </p>
+  <div class="wrapper">
+    <div class="menu">
+      <ul class="menu__list"></ul>
+    </div>
+    <p class="menu is"></p>
+    <p class="user__login"><i class="material-icons login">login</i></p>
+
+    <!-- Burger menu for mobile and tablet -->
+    <!-- <div id="menu__btn">
+      <span class="icon"></span>
+      <span class="text">MENU</span>
+    </div>
+    <div class="user__menu"></div> -->
+  </div>
+</div>
+</div>
     </div>
       </nav>
     </header>
