adds header movile and tablet

--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,19 @@
           </ul>
         </div> -->
 
+        <div class="navigation-left-side">
+          <i class="material-icons icons__header__home">home</i>
+        </div>
+
         <div class="navigation-right-side">
           <form class="search__films">
             <p class="search__films__title">
               Поиск по
-              <span class="search_films_name active__search">названию</span
-              ><span> / </span><span class="search_films_genres">жанру</span>
+              <span class="search_films_name active__search">названию</span>
+              <span> / </span>
+              <span class="search_films_genres">жанру</span>
+              <span> / </span>
+              <span class="search_films_genres">актеру</span>
             </p>
             <label class="search__films_by">
               <input class="name" type="search" />
