--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
           >© 2020 | All Rights Reserved | Developed with
         </span>
         <span class="material-icons footer-icon">favorite</span>
-        <a href="#"><span class="footer_copyright">Angry Beavers</span></a>
+        <span class="footer_copyright team">Angry Beavers</span>
       </div>
     </footer>
   </body>
